# GreySnow

./: CMakeLists.txt
include/: display.h  keyhook.h  statusbar.h
src/: display.c  keyhook.c  main.c  statusbar.c
